# Xanim

./: LICENSE  README.md  pyproject.toml
app/: __init__.py  fa.py  xanim.py
app/static/: base.css  base.js  home.css  watch.css  watch.js
app/templates/: base.html  home.html  search.html  watch.html
